# Cascade_Toolbox

./: CMakeLists.txt  README.md
apps/: collect_test_data.cpp  collect_train_data.cpp  hard_negative_mine.cpp  inference.cpp  inference_simd.cpp  test.cpp  train.cpp
include/: Annotator.hpp  BoundingBox.hpp  CascadeTester.hpp  CascadeTrainer.hpp  utils.hpp
params/: configs.yaml
src/: Annotator.cpp  BoundingBox.cpp  CascadeTester.cpp  CascadeTrainer.cpp  utils.cpp
